--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
 <title>CS472</title>
-</header>
+</head>
 <body>
 
 <h1>My First Heading</h1>
@@ -10,4 +10,5 @@
 <p>My first paragraph.</p>
 
 </body>
+href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 </html>
