--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <p>My first paragraph.</p>
 
 </body>
-href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+<a href="http://validator.w3.org/check/referer">
+	<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+</a>
 </html>
