--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>CS472</title>
-</head>
-<body>
+	<head>
+		<title>CS472</title>
+	</head>
+	<body>
 
-<h1>My First Heading</h1>
+	<img src="images/avatar.JPG" alt="avatar" style="width:200px;height:300px;"/>
 
-<p>My first paragraph.</p>
+	<h1>The Vinh Trang</h1>
+	<h2> Contents </h2>
+	<ul>
+	  <li>W1D1 - Home page</li>
+	  <li>W1D2</li>
+	  <li>W1D3</li>
+	</ul>
 
-</body>
-<a href="http://validator.w3.org/check/referer">
-	<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-</a>
+	</body>
+
+	<a href="http://validator.w3.org/check/referer">
+		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+	</a>
+
 </html>
