--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 	<head>
 		<title>CS472</title>
 	</head>
+	
 	<body>
 
-	<img src="images/avatar.JPG" alt="avatar" style="width:200px;height:300px;"/>
+		<img src="images/avatar.JPG" alt="avatar" style="width:200px;height:300px;"/>
 
-	<h1>The Vinh Trang</h1>
-	<h2> Contents </h2>
-	<ul>
-	  <li>W1D1 - Home page</li>
-	  <li>W1D2</li>
-	  <li>W1D3</li>
-	</ul>
+		<h1>The Vinh Trang</h1>
+		<h2> Contents </h2>
+		<ul>
+		  <li>W1D1 - Home page</li>
+		  <li>W1D2</li>
+		  <li>W1D3</li>
+		</ul>
 
+		<footer>
+			<a href="http://validator.w3.org/check/referer">
+				<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+			</a>
+		</footer>
+	
 	</body>
-
-	<a href="http://validator.w3.org/check/referer">
-		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-	</a>
-
 </html>
