--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</ul>
 
 		<footer>
-			<a href="http://validator.w3.org/check/referer">
+			<a href="https://validator.w3.org/check/referer">
 				<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 			</a>
 		</footer>
