add page about-me

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>CS472</title>
+		<meta charset="UTF-8">
+		<title>CS472 - The Vinh Trang</title>
 	</head>
 	
 	<body>
@@ -11,8 +12,8 @@
 		<h1>The Vinh Trang</h1>
 		<h2> Contents </h2>
 		<ul>
-		  <li>W1D1 - Home page</li>
-		  <li>W1D2</li>
+		  <li><a href="https://vttrang.github.io/cs472/">W1D1 - Home page </a></li>
+		  <li><a href="https:/vttrang.github.io/cs472/about-me">W1D2 - About me </a></li>
 		  <li>W1D3</li>
 		</ul>
 
