--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<h1>The Vinh Trang</h1>
 		<h2> Contents </h2>
 		<ul>
-		  <li><a href="https://vttrang.github.io/cs472/">W1D1 - Home page </a></li>
-		  <li><a href="https:/vttrang.github.io/cs472/about-me">W1D2 - About me </a></li>
+		  <li><a href="#">W1D1 - Home page </a></li>
+		  <li><a href="/about-me.html">W1D2 - About me </a></li>
 		  <li>W1D3</li>
 		</ul>
 
