--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,9 @@
         <title>About Me</title>
     </head>
     <body>
+        <header>
+            <a href="cs472/index.html">Home</a>
+        </header>
         <main>
             <section class="introduction">
                 <div class="heading">About The Vinh Trang</div>
