update styling and correct urls

--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <a href="cs472/index.html">Home</a>
+            <a href="./index.html">Home</a>
         </header>
         <main>
             <section class="introduction">
