update contents and styling

--- a/about-me.html
+++ b/about-me.html
@@ -22,33 +22,41 @@
 
             <section class="classes-schedule">
                 <div class="heading">My classes schedule: </div>
-                <ul>
-                    <li>MPP</li>
-                    <li>BDT</li>
-                    <li>WAP</li>
-                    <li>EA</li>
-                    <li>ASD</li>
-                </ul>
+                <ol>
+                    <li>01 - CS401 - Modern Programing Practice</li>
+                    <li>02 - CS 523 - Big Data Technology</li>
+                    <li>03 - CS472 - Web Application Programming</li>
+                </ol>
             </section>
 
             <section class="favourite-movies">
-                <div class="heading">My favorite movies:</div>
-                <ul>
-                    <li class="tooltip">Avenger - Infinity War
+                <div class="heading">My favorite movies/show:</div>
+                <ol>
+                    <li class="tooltip">
+                        <a href="https://www.imdb.com/title/tt4154796/">Avenger - Infinity War</a>
                         <div class="tooltip-text">
                             Directed by Anthony Russo, Joe Russo <br>
                             Produced by	Kevin Feige <br>
                             Release day Apr 23, 2018
                         </div>
                     </li>
-                    <li class="tooltip">Avenger - End Game
+                    <li class="tooltip">
+                        <a href="https://www.imdb.com/title/tt4154756/">Avenger - End Game</a>
                         <div class="tooltip-text">
                             Directed by Anthony Russo, Joe Russo <br>
                             Produced by	Kevin Feige <br>
                             Release day Apr 26, 2019
                         </div>
                     </li>
-                </ul>
+                    <li class="tooltip">
+                        <a href="https://www.imdb.com/title/tt1586680/">Shameless</a>
+                        <div class="tooltip-text">
+                            First episode date: January 9, 2011 <br>
+                            Network: SHOWTIME <br>
+                            Theme song: The Luck You Got
+                        </div>
+                    </li>
+                </ol>
             </section>
 
             <section class="my-mood">
@@ -67,11 +75,18 @@
 
             <section class="my-neighbor">
                 <div class="heading">Fun facts about my neighbors</div>
-                <p>
-                    I have....
-                </p>
+                <ol>
+                    <li>Cuong Nguyen: smart and hard-working are words to describe him</li>
+                    <li>Phan Anh Nguyen: intelligent and extremely careful person</li>
+                </ol>
 
             </section>
         </main>
+
+        <footer>
+            <a href="https://validator.w3.org/check/referer">
+                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+            </a>
+        </footer>
     </body>
 </html>
