update content and styling

--- a/about-me.html
+++ b/about-me.html
@@ -7,86 +7,81 @@
         <title>About Me</title>
     </head>
     <body>
-        <header>
-            <a href="./index.html">Home</a>
-        </header>
-        <main>
-            <section class="introduction">
-                <div class="heading">About The Vinh Trang</div>
+        <div class="container">
+            <header>
+                <a href="./index.html">Home</a>
+            </header>
+            <main>
+                <section class="introduction">
+                    <div class="heading">About The Vinh Trang</div>
 
-                <div class="into">
-                    <p>My name is <em>Vinh Trang</em> (The is my middle name).</p>
-                    <p><em>Cheerful, warm and introvert</em> are what my friends comment about me.</p>
-                </div>
-            </section>
-
-            <section class="classes-schedule">
-                <div class="heading">My classes schedule: </div>
-                <ol>
-                    <li>01 - CS401 - Modern Programing Practice</li>
-                    <li>02 - CS 523 - Big Data Technology</li>
-                    <li>03 - CS472 - Web Application Programming</li>
-                </ol>
-            </section>
-
-            <section class="favourite-movies">
-                <div class="heading">My favorite movies/show:</div>
-                <ol>
-                    <li class="tooltip">
-                        <a href="https://www.imdb.com/title/tt4154796/">Avenger - Infinity War</a>
-                        <div class="tooltip-text">
-                            Directed by Anthony Russo, Joe Russo <br>
-                            Produced by	Kevin Feige <br>
-                            Release day Apr 23, 2018
-                        </div>
-                    </li>
-                    <li class="tooltip">
-                        <a href="https://www.imdb.com/title/tt4154756/">Avenger - End Game</a>
-                        <div class="tooltip-text">
-                            Directed by Anthony Russo, Joe Russo <br>
-                            Produced by	Kevin Feige <br>
-                            Release day Apr 26, 2019
-                        </div>
-                    </li>
-                    <li class="tooltip">
-                        <a href="https://www.imdb.com/title/tt1586680/">Shameless</a>
-                        <div class="tooltip-text">
-                            First episode date: January 9, 2011 <br>
-                            Network: SHOWTIME <br>
-                            Theme song: The Luck You Got
-                        </div>
-                    </li>
-                </ol>
-            </section>
-
-            <section class="my-mood">
-                <div class="heading">My mood:</div>
-                <div class="content">
-                    <div class="tooltip">
-                        <div class="tooltip-text">This is when I'm happy</div>
-                        <img src="images/happy.jpg" alt="When I'm happy">
+                    <div class="into">
+                        <p>My name is <em>Vinh Trang</em> (The is my middle name).</p>
+                        <p><em>Cheerful, warm and introvert</em> are what my friends comment about me.</p>
                     </div>
-                    <div class="tooltip">
-                        <div class="tooltip-text">This is when I'm NOT happy</div>
-                        <img src="images/sad.jpg" alt="When I'm NOT happy">
+                </section>
+
+                <section class="classes-schedule">
+                    <div class="heading">My class this quarter: </div>
+                    <ul>
+                        <li>CS401 - Modern Programing Practice</li>
+                        <li>CS 523 - Big Data Technology</li>
+                        <li>CS472 - Web Application Programming</li>
+                    </ul>
+                </section>
+
+                <section class="favourite-movies">
+                    <div class="heading">My favorite movies/show:</div>
+                    <ol>
+                        <li>
+                            Avenger - Infinity War <a href="https://www.imdb.com/title/tt4154796/">(IMDB)</a>
+                            <dl>
+                                <dt>Directors</dt>
+                                <dd> Anthony Russo, Joe Russo</dd>
+                                <dt>Writers</dt>
+                                <dd> Christopher Markus, Stephen McFeely </dd>
+                                <dt>Stars</dt>
+                                <dd> Robert Downey Jr., Chris Hemsworth, Mark Ruffalo</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            Avenger - End Game <a href="https://www.imdb.com/title/tt4154756/">(IMDB)</a>
+                        </li>
+                        <li>
+                            Shameless <a href="https://www.imdb.com/title/tt1586680/">(IMDB)</a>
+                        </li>
+                    </ol>
+                </section>
+
+                <section class="my-mood">
+                    <div class="heading">My mood:</div>
+                    <div class="content">
+                        <div class="tooltip">
+                            <div class="tooltip-text">This is when I'm happy</div>
+                            <img src="images/happy.jpg" alt="When I'm happy">
+                        </div>
+                        <div class="tooltip">
+                            <div class="tooltip-text">This is when I'm NOT happy</div>
+                            <img src="images/sad.jpg" alt="When I'm NOT happy">
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <section class="my-neighbor">
-                <div class="heading">Fun facts about my neighbors</div>
-                <ol>
-                    <li>Cuong Nguyen: smart and hard-working are words to describe him</li>
-                    <li>Phan Anh Nguyen: intelligent and extremely careful person</li>
-                </ol>
+                <section class="my-neighbor">
+                    <div class="heading">Fun facts about my neighbors</div>
+                    <ol>
+                        <li>Cuong Nguyen: he's just like Baby in Baby driver.</li>
+                        <li>Phan Anh Nguyen: he's totally a Night Owl</li>
+                    </ol>
 
-            </section>
-        </main>
+                </section>
+            </main>
 
-        <footer>
-            <a href="https://validator.w3.org/check/referer">
-                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-            </a>
-        </footer>
+            <footer>
+                <a href="https://validator.w3.org/check/referer">
+                    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+                </a>
+            </footer>
+        </div>
     </body>
 </html>
