--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
             </header>
             <main>
                 <section class="introduction">
-                    <div class="heading">About The Vinh Trang</div>
+                    <h2 class="heading">About The Vinh Trang</h2>
 
                     <div class="into">
                         <p>My name is <em>Vinh Trang</em> (The is my middle name).</p>
@@ -22,7 +22,7 @@
                 </section>
 
                 <section class="classes-schedule">
-                    <div class="heading">My class this quarter: </div>
+                    <h2 class="heading">My class this quarter: </h2>
                     <ul>
                         <li>CS401 - Modern Programing Practice</li>
                         <li>CS 523 - Big Data Technology</li>
@@ -31,7 +31,7 @@
                 </section>
 
                 <section class="favourite-movies">
-                    <div class="heading">My favorite movies/show:</div>
+                    <h2 class="heading">My favorite movies/show:</h2>
                     <ol>
                         <li>
                             Avenger - Infinity War <a href="https://www.imdb.com/title/tt4154796/">(IMDB)</a>
@@ -54,7 +54,7 @@
                 </section>
 
                 <section class="my-mood">
-                    <div class="heading">My mood:</div>
+                    <h2 class="heading">My mood:</h2>
                     <div class="content">
                         <div class="tooltip">
                             <div class="tooltip-text">This is when I'm happy</div>
@@ -68,7 +68,7 @@
                 </section>
 
                 <section class="my-neighbor">
-                    <div class="heading">Fun facts about my neighbors</div>
+                    <h2 class="heading">Fun facts about my neighbors:</h2>
                     <ol>
                         <li>Cuong Nguyen: he's just like Baby in Baby driver.</li>
                         <li>Phan Anh Nguyen: he's totally a Night Owl</li>
