update content and styling

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="css/about-me.css">
         <link rel="stylesheet" type="text/css" href="css/tooltip.css">
+        <link rel="stylesheet" type="text/css" href="css/util.css">
         <title>About Me</title>
     </head>
     <body>
