--- a/index.html
+++ b/index.html
@@ -2,21 +2,41 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>CS472 - The Vinh Trang</title>
+		<script src="https://kit.fontawesome.com/42ea79d6ee.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/util.css">
+		<title>CS472 - The Vinh Trang - 611035</title>
 	</head>
 	
 	<body>
+		<header>
+			<h1>Welcome to my home page </h1>
+		</header>
 
-		<img src="images/avatar.JPG" alt="avatar" style="width:200px;height:300px;"/>
+		<main>
+			<section class="myself">
+				<img src="images/avatar.JPG" alt="avatar"/>
+				<dl>
+					<dt><h1>The Vinh Trang (611035)</h1></dt>
+					<dd> Hobbies:
+						<i class="fas fa-burn"></i>
+						<i class="fas fas fa-running"></i>
+						<i class="fas fa-walking"></i>
+						<i class="fas fa-swimmer"></i>
+					</dd>
+				</dl>
 
-		<h1>The Vinh Trang</h1>
-		<h2> Contents </h2>
-		<ul>
-		  <li><a href="./index.html">W1D1 - Home page </a></li>
-		  <li><a href="./about-me.html">W1D2 - About me </a></li>
-		  <li>W1D3</li>
-		</ul>
+			</section>
+			<section class="content">
+				<h2> Contents </h2>
+				<ul>
+					<li><a href="./index.html">W1D1 - Home page </a></li>
+					<li><a href="./about-me.html">W1D2 - About me </a></li>
+					<li>W1D3</li>
+				</ul>
 
+			</section>
+		</main>
 		<footer>
 			<a href="https://validator.w3.org/check/referer">
 				<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
