--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 		<main>
 			<section class="myself">
 				<img src="images/avatar.JPG" alt="avatar"/>
-				<dl>
-					<dt><h1>The Vinh Trang (611035)</h1></dt>
-					<dd> Hobbies:
+				<div class="intro">
+					<h1>The Vinh Trang (611035)</h1>
+					<div class="hobbies">
+						Hobbies:
 						<i class="fas fa-burn"></i>
 						<i class="fas fas fa-running"></i>
 						<i class="fas fa-walking"></i>
 						<i class="fas fa-swimmer"></i>
-					</dd>
-				</dl>
-
+					</div>
+				</div>
 			</section>
 			<section class="content">
 				<h2> Contents </h2>
