update content and styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<script src="https://kit.fontawesome.com/42ea79d6ee.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/util.css">
 		<title>CS472 - The Vinh Trang - 611035</title>
@@ -14,19 +13,10 @@
 		</header>
 
 		<main>
-			<section class="myself">
-				<h1></h1>
-				<img src="images/avatar.JPG" alt="avatar"/>
-				<div class="intro">
-					<h1>The Vinh Trang (611035)</h1>
-					<div class="hobbies">
-						Hobbies:
-						<i class="fas fa-burn"></i>
-						<i class="fas fas fa-running"></i>
-						<i class="fas fa-walking"></i>
-						<i class="fas fa-swimmer"></i>
-					</div>
-				</div>
+			<section class="info">
+				<h1>The Vinh Trang (611035)</h1>
+				<img id="myself" src="images/avatar.JPG" alt="avatar"/>
+
 			</section>
 			<section class="content">
 				<h2> Contents </h2>
