add new page recipe

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<section class="content">
 				<h2> Contents </h2>
 				<ul>
-					<li><a href="./index.html">W1D1 - Home page </a></li>
-					<li><a href="./about-me.html">W1D2 - About me </a></li>
+					<li>W1D1 - <a href="./index.html">Home page </a></li>
+					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/index.html">Recipe</a></li>
 					<li>W1D3</li>
 				</ul>
 
