add new page recipe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h2> Contents </h2>
 				<ul>
 					<li>W1D1 - <a href="./index.html">Home page </a></li>
-					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/index.html">Recipe</a></li>
+					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="recipe/recipe.html">Recipe</a></li>
 					<li>W1D3</li>
 				</ul>
 
