--- a/about-me.html
+++ b/about-me.html
@@ -79,9 +79,14 @@
             </main>
 
             <footer>
-                <a href="https://validator.w3.org/check/referer">
-                    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-                </a>
+                <div id="validator">
+                    <a href="https://validator.w3.org/check?uri=referer">
+                        <img src="./images/assets/w3c-html.png" alt="html validator">
+                    </a>
+                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img src="./images/assets/w3c-css.png" alt="css validator">
+                    </a>
+                </div>
             </footer>
         </div>
     </body>
