--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
 				<h2> Contents </h2>
 				<ul>
 					<li>W1D1 - <a href="./index.html">Home page </a></li>
-					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="recipe/recipe.html">Recipe</a></li>
+					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/recipe.html">Recipe</a></li>
 					<li>W1D3</li>
 				</ul>
 
 			</section>
 		</main>
 		<footer>
-			<a href="https://validator.w3.org/check/referer">
-				<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-			</a>
+			<div id="validator">
+				<a href="https://validator.w3.org/check?uri=referer">
+					<img src="./images/assets/w3c-html.png" alt="html validator">
+				</a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+					<img src="./images/assets/w3c-css.png" alt="css validator">
+				</a>
+			</div>
 		</footer>
 	
 	</body>
