--- a/recipe/recipe.html
+++ b/recipe/recipe.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
+        <link rel="stylesheet" type="text/css" href="../css/util.css">
         <title>Grandma's Lemon Meringue Pie</title>
     </head>
     <body>
@@ -98,9 +99,14 @@
             </section>
 
             <footer>
-                <a href="https://validator.w3.org/check/referer" style="float: right">
-                    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-                </a>
+                <div id="validator">
+                    <a href="https://validator.w3.org/check?uri=referer">
+                        <img src="../images/assets/w3c-html.png" alt="html validator">
+                    </a>
+                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img src="../images/assets/w3c-css.png" alt="css validator">
+                    </a>
+                </div>
             </footer>
         </main>
     </body>
