--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		</main>
 		<footer>
 			<div id="validator">
-				<a href="https://validator.w3.org/check?uri=referer">
+				<a href="https://validator.w3.org/check?uri=https://vttrang.github.io/">
 					<img src="./images/assets/w3c-html.png" alt="html validator">
 				</a>
-				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vttrang.github.io/">
 					<img src="./images/assets/w3c-css.png" alt="css validator">
 				</a>
 			</div>
