--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<ul>
 					<li>W1D1 - <a href="./index.html">Home page </a></li>
 					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/recipe.html">Recipe</a></li>
-					<li>W1D3</li>
+					<li>W1D3 - <a href="./w1d3/moviereview.html">Movie Review </a></li>
 				</ul>
 
 			</section>
