--- a/w1d3/moviereview.html
+++ b/w1d3/moviereview.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>TMNT - Rancid Tomatoes</title>
 		<link rel="shortcut icon" href="./images/rotten.gif" />
 		<link href="./css/movie.css" type="text/css" rel="stylesheet" />
 	</head>
-	
-	
 
 <body>
 
