--- a/w1d3/moviereview.html
+++ b/w1d3/moviereview.html
@@ -179,7 +179,7 @@
 		<a href="http://validator.w3.org/check?uri=https://vttrang.github.io/cs472/">
 			<img src="./images/w3c-html.png" alt="Valid HTML5"/>
 		</a> <br>
-		<a href="http://jigsaw.w3.org/css-validator/check?uri=https://vttrang.github.io/cs472/">
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vttrang.github.io/cs472/">
 			<img src="./images/w3c-css.png" alt="Valid CSS"/></a>
 	</div>
 </body>
