Add two forms and their libs

--- a/w1d4/form1.html
+++ b/w1d4/form1.html
@@ -10,10 +10,8 @@
     <title>Web Form 1</title>
 </head>
 <body>
-
-
     <div class="content">
-        <form class="needs-validation">
+        <form class="needs-validation form1">
             <div class="form-group">
                 <label for="inputEmail">Email address</label>
                 <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
@@ -29,11 +27,13 @@
                 <input type="url" class="form-control" id="inputURL" placeholder="URL"
                        pattern="^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?$" required>
             </div>
-            <div class="form-check">
+            <div class="form-check form-group">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
     </div>
 </body>
