--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<li>W1D1 - <a href="./index.html">Home page </a></li>
 					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/recipe.html">Recipe</a></li>
 					<li>W1D3 - <a href="w1d3/movie-review.html">Movie Review </a></li>
+					<li>W1D4 - <a href="w1d4/form1.html">Web Form 1</a> | <a href="w1d4/form2.html">Web Form 2</a></li>
 				</ul>
 
 			</section>
