Update nav to webfrom

--- a/w1d4/form2.html
+++ b/w1d4/form2.html
@@ -13,12 +13,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-classic-blue">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="navbar-brand my-nav-text-color" href="#">MUM Golden Dome Market:::SRM System</a>
+                <a class="navbar-brand my-nav-text-color" href="../index.html">MUM Golden Dome Market:::SRM System</a>
+            </li>
+            <li class="nav-item active border-left mx-2">
+                <a class="nav-link my-nav-text-color" href="../index.html">Home</a>
             </li>
             <li class="nav-item active border-left mx-2">
                 <a class="nav-link my-nav-text-color" href="#">Product</a>
             </li>
-            <li class="nav-item border-left">
+            <li class="nav-item border-left mx-2">
                 <a class="nav-link my-nav-text-color" href="#">Supplier</a>
             </li>
         </ul>
