--- a/w1d4/form1.html
+++ b/w1d4/form1.html
@@ -10,31 +10,46 @@
     <title>Web Form 1</title>
 </head>
 <body>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-classic-blue">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="navbar-brand my-nav-text-color" href="../index.html">CS 472 - The Vinh Trang</a>
+            </li>
+            <li class="nav-item active border-left mx-2">
+                <a class="nav-link my-nav-text-color" href="../index.html">Home</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<main>
     <div class="content">
-        <form class="needs-validation form1">
-            <div class="form-group">
-                <label for="inputEmail">Email address</label>
-                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password"
-                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
-            </div>
-            <div class="form-group">
-                <label for="inputURL">URL</label>
-                <input type="url" class="form-control" id="inputURL" placeholder="URL"
-                       pattern="^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?$" required>
-            </div>
-            <div class="form-check form-group">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
+    <form class="needs-validation form1">
+        <div class="form-group">
+            <label for="inputEmail">Email address</label>
+            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password"
+                   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+        </div>
+        <div class="form-group">
+            <label for="inputURL">URL</label>
+            <input type="url" class="form-control" id="inputURL" placeholder="URL"
+                   pattern="^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?$" required>
+        </div>
+        <div class="form-check form-group">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
     </div>
+</main>
 </body>
 </html>
