--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Welcome to my home page </h1>
 		</header>
 
-		<main>
+		<main class="container">
 			<section class="info">
 				<h2>The Vinh Trang (611035)</h2>
 				<img id="myself" src="images/avatar.JPG" alt="avatar"/>
