update js for form1 & form2

--- a/w1d4/form2.html
+++ b/w1d4/form2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap-4.4.1/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/form.css">
+    <script src="./js/javascript.js"></script>
     <title>Web Form 2</title>
 </head>
 <body>
@@ -79,7 +80,7 @@
         <div class="text-right">
             <button type="reset" class="btn btn-outline-dark mr-5">Reset</button>
             <button class="btn btn-outline-danger mr-5">Cancel</button>
-            <button class="btn btn-outline-primary">Add Product</button>
+            <button class="btn btn-outline-primary" onclick="displayForm2Info()">Add Product</button>
         </div>
     </form>
 </div>
