--- a/w1d4/form1.html
+++ b/w1d4/form1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap-4.4.1/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/form.css">
+    <script src="./js/javascript.js"></script>
     <title>Web Form 1</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="displayForm1Info()">Submit</button>
         </div>
     </form>
     </div>
