--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<li>W1D3 - <a href="w1d3/movie-review.html">Movie Review </a></li>
 					<li>W1D4 - <a href="w1d4/form1.html">Web Form 1</a> | <a href="w1d4/form2.html">Web Form 2</a></li>
 					<li>W1D5 - <a href="w1d5/javascript.html">Javascript</a></li>
+					<li>W1D6 - <a href="w1d6/decoratemytext.html">Decorate My Text</a></li>
 				</ul>
 
 			</section>
