add new assignments

--- a/w1d4/form1.html
+++ b/w1d4/form1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap-4.4.1/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/util.css">
     <link rel="stylesheet" type="text/css" href="./css/form.css">
     <script src="./js/javascript.js"></script>
     <title>Web Form 1</title>
