--- a/w1d5/javascript.html
+++ b/w1d5/javascript.html
@@ -5,6 +5,7 @@
     <title>Java Script</title>
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap-4.4.1/css/bootstrap.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Orbitron'>
+    <link rel="stylesheet" type="text/css" href="../css/util.css">
     <link rel="stylesheet" type="text/css" href="./css/javascript.css">
     <script src="js/commands.js"></script>
     <script src="js/util.js"></script>
