--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" type="text/css" href="css/util.css">
-		<title>CS472 - The Vinh Trang - 611035</title>
-	</head>
-	
-	<body>
-		<header>
-			<h1>Welcome to my home page </h1>
-		</header>
 
-		<main class="container">
-			<section class="info">
-				<h2>The Vinh Trang (611035)</h2>
-				<img id="myself" src="images/avatar.JPG" alt="avatar"/>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <title>CS472 - The Vinh Trang - 611035</title>
+</head>
 
-			</section>
-			<section class="content">
-				<h2> Contents </h2>
-				<ul>
-					<li>W1D1 - <a href="./index.html">Home page </a></li>
-					<li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/recipe.html">Recipe</a></li>
-					<li>W1D3 - <a href="w1d3/movie-review.html">Movie Review </a></li>
-					<li>W1D4 - <a href="w1d4/form1.html">Web Form 1</a> | <a href="w1d4/form2.html">Web Form 2</a></li>
-					<li>W1D5 - <a href="w1d5/javascript.html">Javascript</a></li>
-					<li>W1D6 - <a href="w1d6/decoratemytext.html">Decorate My Text</a></li>
-				</ul>
+<body>
+    <header>
+        <h1>Welcome to my home page </h1>
+    </header>
 
-			</section>
-		</main>
-		<footer>
-			<div id="validator">
-				<a href="https://validator.w3.org/check?uri=https://vttrang.github.io/cs472/">
-					<img src="./images/assets/w3c-html.png" alt="html validator">
-				</a>
-				<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vttrang.github.io/cs472/">
-					<img src="./images/assets/w3c-css.png" alt="css validator">
-				</a>
-			</div>
-		</footer>
-	
-	</body>
+    <main class="container">
+        <section class="info">
+            <h2>The Vinh Trang (611035)</h2>
+            <img id="myself" src="images/avatar.JPG" alt="avatar" />
+
+        </section>
+        <section class="content">
+            <h2> Contents </h2>
+            <ul>
+                <li>W1D1 - <a href="./index.html">Home page </a></li>
+                <li>W1D2 - <a href="./about-me.html">About me </a> | <a href="./recipe/recipe.html">Recipe</a></li>
+                <li>W1D3 - <a href="w1d3/movie-review.html">Movie Review </a></li>
+                <li>W1D4 - <a href="w1d4/form1.html">Web Form 1</a> | <a href="w1d4/form2.html">Web Form 2</a></li>
+                <li>W1D5 - <a href="w1d5/javascript.html">Javascript</a></li>
+                <li>W1D6 - <a href="w1d6/decoratemytext.html">Decorate My Text</a></li>
+                <li>W1D6 - <a href="w2d3/index.html">W2D3</a></li>
+            </ul>
+
+        </section>
+    </main>
+    <footer>
+        <div id="validator">
+            <a href="https://validator.w3.org/check?uri=https://vttrang.github.io/cs472/">
+                <img src="./images/assets/w3c-html.png" alt="html validator">
+            </a>
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vttrang.github.io/cs472/">
+                <img src="./images/assets/w3c-css.png" alt="css validator">
+            </a>
+        </div>
+    </footer>
+
+</body>
+
 </html>
